--- a/config/sync/language/en/webform.settings.yml
+++ b/config/sync/language/en/webform.settings.yml
@@ -5,6 +5,7 @@ settings:
   default_submit_button_label: Submit
   default_reset_button_label: Reset
   default_form_confidential_message: 'This form is confidential. You must <a href="[site:login-url]/logout?destination=[current-page:url:relative]">Log out</a> to submit it.'
+  default_form_login_message: 'Please login to access this webform.'
   default_wizard_prev_button_label: '< Previous Page'
   default_wizard_next_button_label: 'Next Page >'
   default_wizard_start_label: Start
@@ -20,12 +21,16 @@ settings:
   default_confirmation_message: 'New submission added to [webform:title].'
   default_confirmation_back_label: 'Back to form'
   default_submission_label: '[webform_submission:submitted-to]: Submission #[webform_submission:serial]'
+  default_submission_login_message: 'Please login to access this submission.'
+  default_submission_exception_message: 'Unable to process this submission. Please contact the site administrator.'
   default_limit_total_message: 'No more submissions are permitted.'
   default_limit_user_message: 'No more submissions are permitted.'
 element:
   empty_message: '{Empty}'
   default_more_title: More
   default_section_title_tag: h2
+file:
+  file_private_redirect_message: 'Please login to access the uploaded file.'
 mail:
   default_from_name: '[site:name]'
   default_subject: 'Webform submission from: [webform_submission:source-entity]'
